--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Yunyun Cao</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="yunyuncao@u.nus.edu">your-email@example.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,7 +21,7 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
+                    <li><a href="https://github.com/cydouble">@cydouble</a></li>
                     <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
                     <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
                 </ul>    
@@ -33,7 +33,7 @@
                         <i class="fa fa-certificate" aria-hidden="true"></i>
                         School name
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Data Science</h3>
                     <ul>
                         <li>GPA: 4.0</li>
                         <li>Years</li>
