--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Yunyun Cao</h1>
-            <div><a href="yunyuncao@u.nus.edu">your-email@example.com</a></div>
+            <div><a href="yunyuncao@u.nus.edu">yunyuncao@u.nus.edu</a></div>
             
             <section class="box">
                 <h2>
