--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="/src/assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
     <title> Yunyun Cao | Student</title>
@@ -48,7 +48,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Yunyun Cao</span>
           <br />
-          I'm the NUS student.
+          I'm a NUS student.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
